--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ a {
   background-color: transparent;
 }
 a:hover {
-  color: #e6b301;
+  color: #fe3636;
   text-decoration: underline;
 }
 
@@ -2882,7 +2882,7 @@ fieldset:disabled a.btn {
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #e6b301;
+  color: #fe3636;
   text-decoration: underline;
 }
 .btn-link:focus, .btn-link.focus {
@@ -4582,7 +4582,7 @@ input[type=button].btn-block {
 }
 .page-link:hover {
   z-index: 2;
-  color: #e6b301;
+  color: #fe3636;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -9779,7 +9779,7 @@ button.bg-dark:focus {
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #e6b301 !important;
+  color: #fe3636 !important;
 }
 
 .text-secondary {
@@ -9811,7 +9811,7 @@ a.text-info:hover, a.text-info:focus {
 }
 
 a.text-warning:hover, a.text-warning:focus {
-  color: #e6b301 !important;
+  color: #fe3636 !important;
 }
 
 .text-danger {
